--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <!-- Hero Section -->
   <section class="bg-gradient text-center py-5">
     <div class="container">
-      <h1 class="display-4">Meet LesterAI: Your Personal AI Agent</h1>
+      <h1 class="display-4">LesterAI: Your Personal AI Agent</h1>
       <p class="lead mt-3">Empower your business and daily life with a smart, adaptable AI agent that works for you.</p>
       <a href="#features" class="btn btn-light btn-lg mt-4">Discover Features</a>
     </div>
