--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>LesterAI - Local 416 CBA Assistant</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        body {
+            background-color: #f8f9fa;
+            color: #333;
+        }
         .hero-section {
             height: 100vh;
             background-size: cover;
@@ -13,35 +17,41 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            color: white;
+            color: #fff;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            background-color: #343a40;
         }
-        .content {
-            background: rgba(255, 255, 255, 0.8);
-            padding: 20px;
+        .hero-overlay {
+            background: rgba(0, 0, 0, 0.6);
+            padding: 40px;
             border-radius: 8px;
+        }
+        .headline {
+            color: #ff8300;
+        }
+        .footer {
+            background-color: #212529;
+            color: #fff;
         }
     </style>
 </head>
 <body>
     <section class="hero-section" style="background-image: url('background.jpg');">
-        <div class="container text-center">
-            <div class="content">
-                <h1 class="display-4">Welcome to LesterAI</h1>
-                <p class="lead">Your friendly AI-powered Local 416 CBA Assistant</p>
-            </div>
+        <div class="container text-center hero-overlay">
+            <h1 class="display-4 headline">Welcome to LesterAI</h1>
+            <p class="lead">Your trusted AI assistant for the Local 416 Collective Bargaining Agreement</p>
         </div>
     </section>
 
     <div class="container mt-5">
         <h2>About LesterAI</h2>
-        <p>LesterAI is designed to assist members of Local 416 by answering questions related to the Collective Bargaining Agreement. Leveraging advanced AI capabilities, LesterAI provides accurate and easy-to-understand responses, complete with citations from the agreement.</p>
+        <p>LesterAI is an AI-powered assistant created to help members of Local 416 with questions about the Collective Bargaining Agreement. It provides accurate, context-based answers, citing relevant clauses when applicable.</p>
 
         <h3>How It Works</h3>
-        <p>Simply type your question, and LesterAI will search the CBA documentation to provide you with a clear, contextually supported answer.</p>
+        <p>Enter your question, and LesterAI will provide responses based solely on the CBA documentation.</p>
 
         <h3>Disclaimer</h3>
-        <p>This tool is for informational purposes only and should not replace official union guidance or legal advice. Always consult your union representative for complex or specific inquiries.</p>
+        <p>This tool is informational and should not replace official union guidance. Always consult a union representative for complex inquiries.</p>
     </div>
 
     <footer class="text-center py-4">
