--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="hero-section" style="background-image: url('background.jpg');">
         <div class="container text-center hero-overlay">
             <h1 class="display-4 headline">Welcome to LesterAI</h1>
-            <p class="lead">Your trusted AI assistant for the Local 416 Collective Bargaining Agreement</p>
+            <p class="lead">Your evolving AI assistant for the Local 416 Collective Bargaining Agreement</p>
         </div>
     </section>
 
