--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             color: #fff;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             background-color: #343a40;
+            background-image: url('path/to/your/background-image.jpg'); /* Update this path to the image file location */
         }
         .hero-overlay {
             background: rgba(0, 0, 0, 0.6);
