--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             color: #fff;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             background-color: #343a40;
-            background-image: url('https://webllrzjohnson.github.io
-/background4.png'); /* Update this path to the image file location */
+            background-image: url('https://webllrzjohnson.github.io/background4.png'); /* Update this path to the image file location */
         }
         .hero-overlay {
             background: rgba(0, 0, 0, 0.6);
