--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
             color: #333;
         }
         .hero-section {
-            height: 100vh;
+            width: 100%;
+            height: 400px;
+            background-image: url('./images/background1.png');
             background-size: cover;
             background-position: center;
+            background-repeat: no-repeat;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: #fff;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            background-color: #343a40;
-            background-image: url('./images/background4.png'); /* Update this path to the image file location */
+            color: white;
+            font-size: 2em;
         }
         .hero-overlay {
             background: rgba(0, 0, 0, 0.6);
