--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         .hero-section {
             width: 100%;
             height: 400px;
-            background-image: url('./images/background1.png');
+            background-image: url('./images/background4.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
