--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
             color: #333;
         }
         .hero-section {
-            width: 100%;
-            height: 400px;
-            background-image: url('./images/background4.jpg');
+            height: 100vh;
             background-size: cover;
             background-position: center;
-            background-repeat: no-repeat;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: white;
-            font-size: 2em;
+            color: #fff;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            background-color: #343a40;
+            background-image: url('images/background4.jpg'); /* Ensure the image path is correct and the file exists in this directory */
         }
         .hero-overlay {
             background: rgba(0, 0, 0, 0.6);
