--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             color: #fff;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             background-color: #343a40;
-            background-image: url("../images/snowbackground4.png"); /* Ensure the image path is correct and the file exists in this directory */
+            background-image: url("../images/snowbackground.png"); /* Ensure the image path is correct and the file exists in this directory */
         }
         .hero-overlay {
             background: rgba(0, 0, 0, 0.6);
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-    <section class="hero-section" style="background-image: url('../images/background4.jpg');>
+    <section class="hero-section" style="background-image: url('../images/snowbackground.png');>
         <div class="container text-center hero-overlay">
             <h1 class="display-4 headline">Welcome to LesterAI</h1>
             <p class="lead">Your evolving AI assistant for the Local 416 Collective Bargaining Agreement</p>
