--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             color: #fff;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             background-color: #343a40;
-            background-image: url("../images/snowbackground.png"); /* Ensure the image path is correct and the file exists in this directory */
+            /*background-image: url("../images/snowbackground.png");  Ensure the image path is correct and the file exists in this directory */
         }
         .hero-overlay {
             background: rgba(0, 0, 0, 0.6);
