--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LesterAI - Local 416 CBA Assistant</title>
+    <title>LesterAI - Your CBA Assistant</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -19,8 +19,7 @@
             justify-content: center;
             color: #fff;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            background-color: #343a40;
-            /*background-image: url("../images/snowbackground.png");  Ensure the image path is correct and the file exists in this directory */
+            background-color: #212529;
         }
         .hero-overlay {
             background: rgba(0, 0, 0, 0.6);
@@ -31,7 +30,7 @@
             color: #ff8300;
         }
         .footer {
-            background-color: #212529;
+            background-color: #333;
             color: #fff;
         }
     </style>
