--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <section class="hero-section" style="background-image: url('../images/snowbackground.png');>
+    <section class="hero-section" style="background-image: url('../images/background2.png');>
         <div class="container text-center hero-overlay">
             <h1 class="display-4 headline">Welcome to LesterAI</h1>
             <p class="lead">Your evolving AI assistant for the Local 416 Collective Bargaining Agreement</p>
