--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             background-color: #212529;
         }
         .hero-overlay {
-            background: rgba(255, 255, 255, 0.6);
+            background: rgba(0, 0, 0, 0.6);
             padding: 40px;
             border-radius: 8px;
+            width: 100%;
+            max-width: 800px;
         }
         .headline {
             color: #ff8300;
