--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
 <body>
     <section class="hero-section" style="background-image: url('../images/snowbackground.png');">
         <div class="container text-center hero-overlay">
-            <h1 class="display-4 headline">Welcome to LesterAI</h1>
+            <h1 class="display-4 headline">Welcome to lesterAI</h1>
             <p class="lead">Your evolving AI assistant for the Local 416 Collective Bargaining Agreement</p>
         </div>
     </section>
 
     <div class="container mt-5">
         <h2>About LesterAI</h2>
-        <p>LesterAI is an AI-powered assistant created to help members of Local 416 with questions about the Collective Bargaining Agreement. It provides accurate, context-based answers, citing relevant clauses when applicable.</p>
+        <p>lesterAI is an AI-powered assistant created to help members of Local 416 with questions about the Collective Bargaining Agreement. It provides context-based and easy to understand answers, citing relevant clauses when applicable.</p>
 
         <h3>How It Works</h3>
-        <p>Enter your question, and LesterAI will provide responses based solely on the CBA documentation.</p>
+        <p>Click the blue "chat" icon, and lesterAI will provide responses based solely on the TCHC Local416 CBA documentation.</p>
 
         <h3>Disclaimer</h3>
         <p>This tool is informational and should not replace official union guidance. Always consult a union representative for complex inquiries.</p>
     </div>
 
     <footer class="text-center py-4">
-        <p>&copy; 2024 LesterAI. All rights reserved.</p>
+        <p>&copy; 2024 lesterAI. All rights reserved.</p>
 
     </footer>
 
