--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LesterAI - Your CBA Assistant</title>
+    <title>lesterAI - Your CBA Assistant</title>
     <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -47,7 +47,7 @@
     </section>
 
     <div class="container mt-5">
-        <h2>About LesterAI</h2>
+        <h2>About lesterAI</h2>
         <p>lesterAI is an AI-powered assistant created to help members of Local 416 with questions about the Collective Bargaining Agreement. It provides context-based and easy to understand answers, citing relevant clauses when applicable.</p>
 
         <h3>How It Works</h3>
