--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
         <p>Click the blue "chat" icon, and lesterAI will provide responses based solely on the TCHC Local416 CBA documentation.</p>
 
         <h3>Disclaimer</h3>
-        <p>This tool is informational and should not replace official union guidance. Always consult a union representative for complex inquiries.</p>
+        <p>
+            This tool is for informational purposes only and should not replace official union guidance. 
+            Always consult a union representative for complex inquiries. This website is <strong>not endorsed by the Local 416 Union, Toronto Community Housing, or any organization.</strong> 
+            It is an experimental project created solely for <strong>educational purposes.</strong> Use of this tool is at your own discretion, and users are encouraged to seek formal advice for any critical matters.
+        </p>
     </div>
 
     <footer class="text-center py-4">
