--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
             },
             chatWindow: {
                 showTitle: true,
-                title: 'Flowise Bot',
+                title: 'Legatus - an AI assistant',
                 titleAvatarSrc: 'https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg',
                 showAgentMessages: true,
-                welcomeMessage: 'Hello! This is custom welcome message',
-                errorMessage: 'This is a custom error message',
+                welcomeMessage: 'Hello! How can I help you?',
+                errorMessage: 'I am experiencing an aura. excuse me.',
                 backgroundColor: "#ffffff",
                 backgroundImage: 'enter image path or link', // If set, this will overlap the background color of the chat window.
                 height: 700,
@@ -140,7 +140,7 @@
                 footer: {
                     textColor: '#303235',
                     text: 'Powered by',
-                    company: 'Flowise',
+                    company: 'lesterAI',
                     companyLink: 'https://flowiseai.com',
                 }
             }
