--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="container mt-5">
         <h2>About lesterAI</h2>
-        <p>lesterAI is an AI-powered assistant created to help members of Local 416 with questions about the Collective Bargaining Agreement. It provides context-based and easy to understand answers, citing relevant clauses when applicable.</p>
+        <p>Legatus is an AI-powered assistant created to help members of Local 416 with questions about the Collective Bargaining Agreement. It provides context-based and easy to understand answers, citing relevant clauses when applicable.</p>
 
         <h3>How It Works</h3>
         <p>Click the blue "chat" icon, and lesterAI will provide responses based solely on the TCHC Local416 CBA documentation.</p>
