--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     backgroundColor: "#f7f8ff",
                     textColor: "#303235",
                     showAvatar: true,
-                    avatarSrc: "https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/parroticon.png",
+                    avatarSrc: "https://avatars.githubusercontent.com/u/23437261?v=4",
                 },
                 userMessage: {
                     backgroundColor: "#3B81F6",
